[MODORDERS-915] - NPE in OrderReEncumberService.java:245 (#770)